# recondite

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
platform/rgl/: CMakeLists.txt  rOpenGLContentManager.cpp  rOpenGLContentManager.hpp  rOpenGLDefaultShaders.inl  rOpenGLDesktopGraphicsDevice.cpp  rOpenGLDesktopGraphicsDevice.hpp  rOpenGLGraphicsDevice.cpp  rOpenGLGraphicsDevice.hpp
platform/sdl/: CMakeLists.txt  rSDLApplication.cpp  rSDLApplication.hpp  rSDLContentManager.cpp  rSDLContentManager.hpp  rSDLGraphicsDevice.cpp  rSDLGraphicsDevice.hpp  rSDLInputManager.cpp  rSDLInputManager.hpp  rSDLMain.cpp
samples/basicscene/: BasicSceneApplication.cpp  BasicSceneModule.cpp  BasicSceneModule.hpp  BasicScenePlugin.cpp  BasicScenePlugin.hpp  CMakeLists.txt
samples/modelviewer/: CMakeLists.txt  ModelViewerApplication.cpp  ModelViewerCamera.cpp  ModelViewerCamera.hpp  ModelViewerController.cpp  ModelViewerController.hpp  ModelViewerModule.cpp  ModelViewerModule.hpp  ModelViewerPlugin.cpp  ModelViewerPlugin.hpp  ModelViewerSettings.hpp  SkeletonGeometry.cpp  SkeletonGeometry.hpp  rDemoCamera.cpp  rDemoCamera.hpp  rDemoModule.cpp  rDemoModule.hpp  rDemoPawn.cpp  rDemoPawn.hpp  ruiDemoController.cpp  ruiDemoController.hpp
samples/selection/: CMakeLists.txt  SelectionApplication.cpp  SelectionModule.cpp  SelectionModule.hpp
samples/userinterface/: CMakeLists.txt  UserInterfaceApplication.cpp  UserInterfaceController.cpp  UserInterfaceController.hpp  UserInterfaceModule.cpp  UserInterfaceModule.hpp
src/: CMakeLists.txt
src/asset/: CMakeLists.txt  rAnimation.cpp  rAnimationPlayer.cpp  rAsset.cpp  rAssetManifest.cpp  rFont.cpp  rFontData.cpp  rFontFile.cpp  rFontGlyph.cpp  rFontManager.cpp  rGeometry.cpp  rGeometryData.cpp  rGeometryFile.cpp  rGeometryManager.cpp  rMaterial.cpp  rMaterialData.cpp  rMaterialFile.cpp  rMaterialManager.cpp  rModel.cpp  rModelData.cpp  rModelDataDecoder.cpp  rModelDataEncoder.cpp  rModelFile.cpp  rModelManager.cpp  rPrimitiveGeometryData.cpp  rShader.cpp  rShaderData.cpp  rShaderFile.cpp  rShaderManager.cpp  rSkeleton.cpp  rTexCoordGeometryData.cpp  rTexture.cpp  rTexture2D.cpp  rTextureAtlasData.cpp  rTextureData.cpp  rTextureFile.cpp  rTextureManager.cpp  rVertexColorGeometryData.cpp
src/core/: CMakeLists.txt  rActor3.cpp  rActorFactory.cpp  rActorSerialization.cpp  rAlignedBoxBoundingVolume.cpp  rAnimation.cpp  rAnimationController.cpp  rAnimationPlayer.cpp  rAnimationTrack.cpp  rApplication.cpp  rApplicationBase.cpp  rArchive.cpp  rArrayString.cpp  rBehaviorManager.cpp  rCamera.cpp  rColor.cpp  rComponent.cpp  rContentManager.cpp  rDrawable.cpp  rEngine.cpp  rEventHandler.cpp  rFileSystem.cpp  rGraphicsDevice.cpp  rImmediateBuffer.cpp  rInputManager.cpp  rLog.cpp  rModelInstance.cpp  rModule.cpp  rOrbitCamera.cpp  rPath.cpp  rPawn.cpp  rPoint.cpp  rProp.cpp  rPropertyCollection.cpp  rRect.cpp  rRenderer.cpp  rRenderingOptions.cpp  rResourceManager.cpp  rScene.cpp  rSize.cpp  (+8 more)
src/data/: CMakeLists.txt  rAsseManifestDataFile.cpp  rAssetManifestData.cpp  rAssetManifestDataFile.cpp  rFontData.cpp  rGeometryData.cpp  rGeometryDataFile.cpp  rImmediateBuffer.cpp  rLogContentListener.cpp  rMaterialData.cpp  rModelData.cpp  rModelDataFile.cpp  rModelGeometryData.cpp  rPrimitiveGeometryData.cpp  rShaderData.cpp  rSkeletonData.cpp  rTexCoordGeometryData.cpp  rTexture2DData.cpp  rVertexColorGeometryData.cpp
src/geometry/: CMakeLists.txt  rAlignedBox3.cpp  rCircle2.cpp  rCone3.cpp  rFrustrum.cpp  rGeometry3.cpp  rGeometryUtil.cpp  rIntersection.cpp  rIntersection2.cpp  rIntersection3.cpp  rLine2.cpp  rPlane.cpp  rPlane3.cpp  rSphere.cpp  rSphere3.cpp  rTriangle2.cpp
src/input/: CMakeLists.txt  rController.cpp  rControllerButton.cpp  rDPad.cpp  rDragGesture.cpp  rGestureTracker.cpp  rInputButton.cpp  rKeyboard.cpp  rMouse.cpp  rPinchGesture.cpp  rTouch.cpp
src/log/: CMakeLists.txt  rLogChain.cpp  rLogFile.cpp  rLogStdOut.cpp
src/math/: CMakeLists.txt  rMath.cpp  rMathUtil.cpp  rMatrix3.cpp  rMatrix4.cpp  rMatrix4.cpp~  rMatrixUtil.cpp  rQuaternion.cpp  rVector2.cpp  rVector3.cpp  rVector4.cpp
src/platform/: CMakeLists.txt
src/primitive/: CMakeLists.txt  rPrimitive.cpp  rPrimitiveBox.cpp  rPrimitiveCone.cpp  rPrimitiveCylinder.cpp  rPrimitiveGeometry.cpp  rPrimitiveGrid.cpp  rPrimitiveSerialization.cpp  rPrimitiveSphere.cpp
src/stream/: CMakeLists.txt  rArchiveStream.cpp  rIFileStream.cpp  rIStream.cpp  rIStringStream.cpp  rOFileStream.cpp  rOStream.cpp  rOStringStream.cpp
src/ui/: CMakeLists.txt  ruiAbsoluteLayout.cpp  ruiAnalogStick.cpp  ruiButton.cpp  ruiCheckbox.cpp  ruiController.cpp  ruiDPad.cpp  ruiDefaultEventHandler.cpp  ruiDocument.cpp  ruiDocumentLoader.cpp  ruiEventHandler.cpp  ruiLayout.cpp  ruiLayoutManager.cpp  ruiLinearLayout.cpp  ruiLogText.cpp  ruiManager.cpp  ruiMenu.cpp  ruiMenuManager.cpp  ruiOverlay.cpp  ruiOverlayLoader.cpp  ruiOverlayManager.cpp  ruiPicker.cpp  ruiPickerBase.cpp  ruiPickerOptionsMenu.cpp  ruiSlider.cpp  ruiStyle.cpp  ruiStyleManager.cpp  ruiStyledWidgetBase.cpp  ruiStylesheetLoader.cpp  ruiStylesheetParser.cpp  ruiText.cpp  ruiTextBox.cpp  ruiWidget.cpp  ruiWidgetBase.cpp
src/xml/: CMakeLists.txt  rXMLAttributeList.cpp  rXMLDocument.cpp  rXMLDocumentLoader.cpp  rXMLElement.cpp  rXMLReader.cpp  rXMLSerialization.cpp  rXMLUtil.cpp  rXMLWriter.cpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  rAnimationCurve_Test.cpp  rAnimationPlayer_Test.cpp  rAnimationTrack_Test.cpp  rAnimation_Test.cpp  rArchiveData_Test.cpp  rArchive_Test.cpp  rArrayString_Test.cpp  rColor_Test.cpp  rEventHandler_Test.cpp  rOctree_Test.cpp  rPath_Test.cpp  rViewport_Test.cpp
test/geometry/: CMakeLists.txt  rFrustrum_Test.cpp  rGeometry_Test_Common.cpp  rGeometry_Test_Common.hpp  rIntersection_Test.cpp  rPlane_Test.cpp
test/math/: CMakeLists.txt  rMath_Test.cpp  rQuaternion_Test.cpp  rVector3_Test.cpp
test/stream/: CMakeLists.txt  rArchiveEntryStream_Test.cpp
test/testcommon/: CMakeLists.txt  TestFilesystem.cpp  TestFilesystem.hpp
test/ui/: CMakeLists.txt  ruiButton_Test.cpp  ruiCheckbox_Test.cpp  ruiMenu_Test.cpp  (+1 more)
(+535 files in other folders)
